vlib/v/parser/tests/fn_type_only_args_no_body.vv
fn test(int) {
}

fn main() {
	test(0)
}
